Fixed messages method to send normal and "messages.yml" messages.